Add menu for switching address book